[gd_scene load_steps=2 format=3 uid="uid://chnfbg6f4wb1"]

[ext_resource type="Script" uid="uid://c17lbp5c0pmxt" path="res://scripts/ui/menus/character_selection.gd" id="1_ftynk"]

[node name="CharacterSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ftynk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3647059, 0.5921569, 0.5176471, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 38.0
offset_right = 123.0
offset_bottom = 93.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Select Slayer"

[node name="CharacterListControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -240.0
offset_right = 400.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CharacterListControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.47058824, 0.76862746, 0.7647059, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="CharacterListControl"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterList" type="VBoxContainer" parent="CharacterListControl/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -274.0
offset_top = -72.0
offset_right = 279.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 50

[node name="SelectButton" type="Button" parent="Buttons"]
layout_mode = 2
disabled = true
text = "Select Player"

[node name="CreateButton" type="Button" parent="Buttons"]
layout_mode = 2
text = "Create new Character"

[node name="DeleteButton" type="Button" parent="Buttons"]
layout_mode = 2
disabled = true
text = "Delete"

[node name="BackButton" type="Button" parent="Buttons"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="Buttons/SelectButton" to="." method="_on_select_button_pressed"]
[connection signal="pressed" from="Buttons/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="Buttons/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="Buttons/BackButton" to="." method="_on_back_button_pressed"]
